--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
 
     [params.footer.paragraph]
     headline = "Informace o bytu"
-    text = "Vlastník nabízí k pronájmu kompletně zrekonstruovaný, cihlový byt 2+KK s lodžií v Brně-Králově Poli, na ulici Vodova 53. Okna a lodžie jsou obracený na lipovou alej, která je nejdelší svého druhu v Brně. Koruny stromů stíní slunci a ochlazují okolí.<br/><br/>Velmi světlý, slunný byt se východní orientací nabízí kvalitní bydlení ve výborné poloze, se skvělou dostupností MHD (zastávka tramvaje, trolejbusu a autobusu Skácelova 200m), obchodu (potraviny Brněnka 200m) a koupaliště po rekonstrukcí Dobrák (400m). Ve dvoře je dětské hřiště. V okolí je veškerá občanská vybavenost - gymnázium, ZŠ, MŠ, poliklinika, restaurace BUTCHER’s a diskotéka Pitkin music club.<br/><br/>Bytová jednotka o celkové výměře 55,7 m2 (včetně lodžie 3,5 m2 a prostorného sklepa o výměře 7 m2) se nachází v 3 NP pětipatrového bytového domu po celkové revitalizaci. Byt po celkové rekonstrukci v roce 2014 - nová koupelna včetně rozvodů vody a odpadů (s vyhřívanou podlahou), kuchyňská linka ORESI s vestavěnými spotřebiči ZANUSSI, nové elektrické rozvody, plovoucí podlahy, bezpečnostní vstupní dveře do bytu. Vlastní plynový kotel BAXI v bytě (vytápění a ohřev vody). V celém domě nové stupačky, kvalitní plastová okna, zateplená fasáda. <br/><br/>Dispozice bytu: čistá podlahová plocha 45,2 m2 (předsíň 4,62 m2, koupelna +WC 4,26 m2, obývací pokoj +KK 16,88 m2, spížka s oknem 1,02 m2, ložnice 18,42 m2, lodžie 3,5 m2). Bezproblémové parkování. V ceně nájemného je zahrnutu používání veškerého vybavení bytu.<br/><br/><b>Cena: 14 000 Kč + zálohy na elektřinu a plyn (600 Kč + 900 Kč)</b><br/><br/>Tel. 776 867 151. Prosim realitní kanceláře nekontaktovat!"
+    text = "Vlastník nabízí k pronájmu kompletně zrekonstruovaný, cihlový byt 2+KK s lodžií v Brně-Králově Poli, na ulici Vodova 53. Okna a lodžie jsou obracený na lipovou alej, která je nejdelší svého druhu v Brně. Koruny stromů stíní slunci a ochlazují okolí.<br/><br/>Velmi světlý, slunný byt s východní orientací nabízí kvalitní bydlení ve výborné poloze, se skvělou dostupností MHD (zastávka tramvaje, trolejbusu a autobusu Skácelova 200m), obchodu (potraviny Brněnka 200m) a koupaliště po rekonstrukcí Dobrák (400m). Ve dvoře (z druhé strany) je dětské hřiště. V okolí je veškerá občanská vybavenost - potraviny, zastávky, poliklinika, restaurace BUTCHER’s, Na Purkynce, Liquid Bread a jiné. Do technologického parku je to kousek pěšky nebo tři zastávky šalinou. Do centra 10 minut šalinou.<br/><br/>Bytová jednotka o celkové výměře 55,7 m2 (včetně lodžie 3,5 m2 a prostorného sklepa o výměře 7 m2) se nachází v 3 NP pětipatrového bytového domu po celkové revitalizaci. Byt po celkové rekonstrukci v roce 2014 - nová koupelna včetně rozvodů vody a odpadů (s vyhřívanou podlahou), kuchyňská linka ORESI s vestavěnými spotřebiči ZANUSSI, nové elektrické rozvody, plovoucí podlahy, bezpečnostní vstupní dveře do bytu. Vlastní plynový kotel BAXI v bytě (vytápění a ohřev vody). V celém domě nové stupačky, kvalitní plastová okna, zateplená fasáda. <br/><br/>Dispozice bytu: čistá podlahová plocha 45,2 m2 (předsíň 4,62 m2, koupelna +WC 4,26 m2, obývací pokoj +KK 16,88 m2, spížka s oknem 1,02 m2, ložnice 18,42 m2, lodžie 3,5 m2). Bezproblémové parkování. V ceně nájemného je zahrnuto používání veškerého vybavení bytu.<br/><br/><b>Cena: 14 600 Kč + zálohy na elektřinu a plyn (1300 Kč + 1100 Kč)</b><br/><br/>Tel. 776 867 151. Prosim realitní kanceláře nekontaktovat!"
     
     [params.footer.social]
     headline = "O mne"
@@ -52,9 +52,9 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     icon = "fa-github"
 
     [[params.footer.social.links]]
-    label = "Telefon"
-    url = "tel:+420776867151"
-    icon = "fa-phone"
+    label = "email"
+    url = "mailto:jiri.kremser@gmail.com"
+    icon = "fa-envelope"
     
     # Contact form
     
